@@ -133,6 +133,7 @@ enum  Action
    CALCULATOR,
    DRAW_FRAMES,
    TABS_EXPAND,
+   SPAN_TABS_EXPAND,
    TEXT_OPTIMIZE,
    CHOOSE_CHAR,
    CHOOSE_WCHAR,
